# opam-sync-github-prs

./: .gitignore  .merlin  Makefile  README.md  _tags  create_pull.ml  create_pull_request.ml  dune  dune-project  generate.ml  opam-sync-github-prs.opam  sync.sh
files/: base-opam  variant-opam
