opam-version: "1.2"
maintainer: "anil@recoil.org"
authors: [ "Anil Madhavapeddy" ]
homepage: "https://github.com/avsm/opam-sync-github-prs"
bug-reports: "https://github.com/avsm/opam-sync-github-prs/issues"
dev-repo: "https://github.com/avsm/opam-sync-github-prs.git"
tags: [
  "org:ocamllabs"
  "flags:plugin"
]
build: [
  ["dune" "build"]
]
depends: [
  "dune" { build }
  "bos" 
  "github-unix" { >="3.0.0" }
  "lwt" { >"2.4.2"}
  "crunch"
  "ptime"
  "ocaml-version"
  "rresult"
]
